# image_processor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  controller.cpp  controller.h  help.cpp  help.h  image.cpp  image.h  image_processor.cpp  in_out.cpp  in_out.h  parser.cpp  parser.h
src/filters/: filter.h
src/filters/anaglyph/: anaglyph.cpp  anaglyph.h
src/filters/crop/: crop.cpp  crop.h
src/filters/gaussian_blur/: gaussian_blur.cpp  gaussian_blur.h
src/filters/linear_filters/: grayscale.cpp  grayscale.h  linear_filter.cpp  linear_filter.h  negative.cpp  negative.h
src/filters/matrix_filters/: edge_detection.cpp  edge_detection.h  matrix_filter.cpp  matrix_filter.h  sharp.cpp  sharp.h
src/filters/merge_images/: merge_images.cpp  merge_images.h
